Improving Code Appearance and Adding Comments

--- a/airport_app/users/templates/users/layout.html
+++ b/airport_app/users/templates/users/layout.html
@@ -1,15 +1,15 @@
 <!-- Basic html -->
-
+{% load static %}
 <!DOCTYPE html>
 
 <html lang="en">
     <head>
         <title>Airpoo</title>
-        <link rel="icon" href="{{ url_for('static', filename='airpoo_logo.ico') }}" type="image/x-icon">
+        <link rel="icon" href="{% static 'airpoo_logo.ico' %}" type="image/x-icon">
         <meta name="viewport" content="initial-scale=1, width=device-width">
     </head>
     <table>
-        {% body block %}
+        {% block body %}
         {% endblock %}
     </table>
 </html>
