--- a/airport_app/users/templates/users/layout.html
+++ b/airport_app/users/templates/users/layout.html
@@ -1,15 +1,34 @@
 <!-- Basic html -->
 {% load static %}
+
 <!DOCTYPE html>
 
 <html lang="en">
+
     <head>
-        <title>Airpoo</title>
-        <link rel="icon" href="{% static 'airpoo_logo.ico' %}" type="image/x-icon">
+        <!-- Enter address -->
+        <title>AirPolet</title>
+        <!-- Define basic stylesheet --> 
+        <link rel="stylesheet" href="{% static 'users/header.css' %}"> 
+        <link rel="icon" href="{% static 'users/airpoo_logo.ico' %}" type="image/x-icon">
         <meta name="viewport" content="initial-scale=1, width=device-width">
     </head>
-    <table>
+
+    <body>
+        <header>
+            <div class="logo">AirPolet</div>
+            <nav>
+                <ul>
+                    <li><a>Home Page</a></li>
+                    <li><a>Tickets</a></li>
+                    <li><a>Contact</a></li>
+                    <li><a>Profile</a></li>
+                </ul>
+            </nav>
+        </header>
+
         {% block body %}
         {% endblock %}
-    </table>
+    </body>
+
 </html>
