The Base Code for the Login and Registration Form Backend

--- a/airport_app/users/static/users/css/layout.css
+++ b/airport_app/users/static/users/css/layout.css
@@ -29,7 +29,7 @@ header {
     font-size: 1.8rem;
     font-weight: bold;
     font-style: italic;
-    color: #dd0000;
+    color: #d9534f;
 }
 
 /* Navigation menu default style settings */
