--- a/airport_app/users/templates/users/registration.html
+++ b/airport_app/users/templates/users/registration.html
@@ -1,11 +1,9 @@
-{% extends "users/layout.html" %}
+<!-- Form of registration --> 
+<h2>Register</h2>
+<form method="POST" id="registration-form">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit" class="btn-submit">Register</button>
+</form>
 
-{% block body %}
-    <!-- Form of registration --> 
-    <form method="post">
-        {% csrf_token %}
-        {{ form }}
-        <button type="submit">Register</button>
-    </form>
-{% endblock %}
 
