--- a/airport_app/users/templates/users/layout.html
+++ b/airport_app/users/templates/users/layout.html
@@ -21,12 +21,11 @@
             <div class="logo">AirPolet</div>
             <nav>
                 <ul>
-                    <li><a class="header-link" href="#">Home Page</a></li>
-                    <li><a class="header-link" href="#">Tickets</a></li>
+                    <li><a class="header-link" href="/users/">Home Page</a></li>
                     <li><a class="header-link" href="#">Special Offers</a></li>                   
                 </ul>
             </nav>
-            <a class="header-link" href="#">
+            <a class="header-link" href="/users/authentication/registration-login/">
                 <img id="profile-image" src="{% static 'users/profile.png' %}" alt="Profile">
             </a>
         </header>
