--- a/airport_app/users/templates/users/layout.html
+++ b/airport_app/users/templates/users/layout.html
@@ -11,7 +11,7 @@
         <!-- Define basic stylesheet --> 
         <link rel="stylesheet" href="{% static 'users/css/layout.css' %}"> 
         <!-- Icon setting -->
-        <link rel="icon" href="{% static 'users/airpoo_logo.ico' %}" type="image/x-icon">
+        <link rel="icon" href="{% static 'users/airpolet_logo.ico' %}" type="image/x-icon">
         <meta name="viewport" content="initial-scale=1, width=device-width">
     </head>
 
