add flight booking handling

--- a/airport_app/users/templates/users/results.html
+++ b/airport_app/users/templates/users/results.html
@@ -61,7 +61,7 @@
             };
 
             const handleBooking = () => {
-                window.location.href = `/checkout?flight_id=${flightId}&passengers=${passengers}`;
+                window.location.href = `/users/checkout?flight_id=${flightId}&passengers=${passengers}`;
             }
 
             // Create the appearance of the Seatselector based on the specified capacity and available 
