--- a/airport_app/users/static/users/css/layout.css
+++ b/airport_app/users/static/users/css/layout.css
@@ -67,6 +67,7 @@ footer {
     font-style: italic;
     color: #333;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 /* Responsive settings */
