--- a/airport_app/workers/static/workers/css/layout.css
+++ b/airport_app/workers/static/workers/css/layout.css
@@ -38,6 +38,7 @@ footer {
     font-style: italic;
     color: #333;
     text-align: center;
+    margin-bottom: 20px;
 }
 
 /* Responsive settings */
